# ttl-inventory-mgm-utils

./: .gitignore  arima_train_test.ipynb  demand_residuals.csv  demand_residuals_xgboost_morefeatures.csv  eda_1.ipynb  forecasting_ready_1.csv  future_demand_forecast.csv  last60_actual_vs_pred.csv  lstm.ipynb  monte_carlo_xgboost_2.ipynb  prophet.ipynb  prophet_train_test.ipynb  pyproject.toml  sarima.ipynb  synthetic_erp_data.csv  synthetic_erp_gen.py  xgboost.ipynb  xgboost_morefeatures.ipynb
phase1/: monte_carlo_1.ipynb  prophet_train_test.ipynb  sarima.ipynb
phase2/: arimax.ipynb  demand_residuals_xgboost_morefeatures.csv  feature_columns_xgboost_morefeatures.csv  last_known_features_xgboost_morefeatures.csv  lstm_more.ipynb  monte_carlo_2_results  monte_carlo_xgboost_2.ipynb  policy_optimization_results.csv  xgboost.ipynb  xgboost_demand_model.json  xgboost_morefeatures.ipynb
