[project]
name = "ttl-agentic-ai"
version = "0.1.0"
description = "Inventory management prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pmdarima>=2.1.1",
    "prophet>=1.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.3",
]
